インベントリ、GUIを持つブロックを追加
参考:
https://json-fileman.hatenablog.com/entry/2019/01/07/095553

https://json-fileman.hatenablog.com/entry/2019/01/09/012905

https://json-fileman.hatenablog.com/entry/2019/01/11/000626

--- a/src/main/resources/assets/myfirstmod/lang/en_us.lang
+++ b/src/main/resources/assets/myfirstmod/lang/en_us.lang
@@ -3,6 +3,7 @@ item.myfirstmod.my_first_item.name=My First Item
 
 # Block
 tile.myfirstmod.my_first_block.name=My First Block
+tile.myfirstmod.my_first_gui_block.name=My First GUI Block
 
 # Creative tab
 itemGroup.myfirstmod=My First Mod
